# mcpartra

./: .gitignore  BatchedRun.sh  CMakeLists.txt  chi_montecarlon.h  chi_montecarlon_particle.h  main.cc
MCParTra/: CMakeLists.txt  mcpartra.h  mcpartra_particle.h
RandomNumberGenerator/: montecarlon_rng.h
Raytrace/: raytracing.cc  raytracing.h  raytracing_1D_slab.cc  raytracing_2D_polygon.cc  raytracing_3D_polyhedron.cc
RegressionTests/: BLOCK_CITYV2a.case  LODTest0.lua  MonteCarlo1D_1MatSource.lua  MonteCarlo2D_1Poly.lua  MonteCarlo3D_1Poly.lua  MonteCarlo3D_5Cycles.lua  MonteCarlo3D_5Cycles_LBS.lua  MonteCarlo3D_5Cycles_combine.lua  Residual3MC1D_1.lua  Residual3MC1D_2.lua  Residual3MC1D_2a.lua  Residual3MC1D_2a_Sn8.lua  Residual3MC2D_2.lua  Residual3MC2D_2b.lua  Residual3MC2D_2b_imp.lua  Residual3MC2D_2c.lua  Residual3MC2D_2c_imp.lua  Residual3MC2D_3_imp.lua  SimpleSource1_r1.case  SimpleSource1_r100000.geo  Take1a.case  TopographicalMesh.case  ZResults.xlsx  Z_Run_all.py  xs_air_50rh_116La.data  xs_ss304_116.data
Solver/: solver_00_constrdestr.cc  solver_01_initialize.cc  solver_01a_initmaterials.cc  solver_01a_initraytracers.cc  solver_01b_initcellimportances.cc  solver_01b_initparticlebatches.cc  solver_01b_inittallies.cc  solver_01c_initfieldfuncs.cc  solver_01c_inittallies.cc  solver_01d_init_mom_indices.cc  solver_01d_initfieldfuncs.cc  solver_01d_initghostids.cc  solver_01e_inittallies.cc  solver_01f_initfieldfuncs.cc  solver_01f_initsources.cc  solver_01g_initghostids.cc  solver_01g_initparticlebatches.cc  solver_01h_initsources.cc  solver_02_execute.cc  solver_02a_execute.cc  solver_02a_sample_sources.cc  solver_02b_execute_rmc.cc  solver_02b_print_batch_info.cc  solver_03_raytrace.cc  solver_03_raytrace_rmc.cc  solver_03_raytrace_unc.cc  solver_04_scatter.cc  (+27 more)
(+190 files in other folders)
